# memobot

./: .dockerignore  Cargo.toml  rust-toolchain.toml
bot/: Cargo.toml
bot/cli/: main.rs
bot/src/: lib.rs
bot/src/api/: mod.rs
bot/src/bot/: context.rs  shard.rs
bot/src/sentry/: mod.rs
bot/src/services/: bot.rs
bot/src/util/: mod.rs  tracing.rs
core/env_vars/: Cargo.toml
core/env_vars/src/: lib.rs
core/kernel/: Cargo.toml  build.rs
core/kernel/src/: lib.rs  sensitive.rs  shutdown.rs
core/kernel/src/config/: api.rs  mod.rs  sentry.rs
crates/cmd_schema/: Cargo.toml
crates/cmd_schema/src/: lib.rs
crates/env_vars/: Cargo.toml
crates/env_vars/src/: lib.rs
docker/: Dockerfile  entrypoint.sh
src/: lib.rs  sentry.rs
src/app/: mod.rs  shutdown.rs
src/bot/: context.rs  mod.rs  shard.rs
src/config/: mod.rs  paradise.rs  sentry.rs
src/services/: bot.rs  mod.rs  paradise.rs
src/util/: mod.rs  tracing.rs
