[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["memothelemo <dev@memothelemo.xyz>"]
repository = "https://github.com/memothelemo/assistant-bot"

[package]
name = "memobot"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true

memobot_cmd_schema = { path = "crates/cmd_schema" }
memobot_env_vars = { path = "crates/env_vars" }

async-trait = "0.1.77"
envy = "0.4.2"
futures = "0.3.30"
num_cpus = "1.16.0"
sentry = { version = "0.32.0", default-features = false, features = ["backtrace", "contexts", "reqwest", "tracing", "rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
smart-default = "0.7.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions.workspace = true
twilight-model.workspace = true
twilight-util = { version = "0.15.4", features = ["builder"] }

elytra-ping = "*"
twilight-mention = "0.15.3"

[workspace.dependencies]
anyhow = "1.0.80"
dotenvy = "0.15.7"

twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
