[workspace]
members = ["bot", "core/*", "extern/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
description = "My personal Discord bot for personal purposes"
edition = "2021"
authors = ["memothelemo <dev@memothelemo.xyz>"]
repository = "https://github.com/memothelemo/assistant-bot"
license = "AGPL-2.0"
rust-version = "1.74.0"

[workspace.dependencies]
memobot_env_vars = { path = "core/env_vars" }
memobot_kernel = { path = "core/kernel" }
memobot_paradise = { path = "extern/paradise"}

actix-web = "4.5.1"
async-trait = "0.1.77"
chrono = "0.4.34"
futures = "0.3.30"
once_cell = "1.19.0"
num_cpus = "1.16.0"
sentry = { version = "0.32.0", default-features = false, features = ["backtrace", "contexts", "reqwest", "tracing", "rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
smart-default = "0.7.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tryhard = "0.5.1"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-mention = "0.15.3"
twilight-util = { version = "0.15.4", features = ["builder"] }

derive_more = "0.99.17"
dotenvy = "0.15.7"
error-stack = "0.4.1"

twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
