[package]
name = "memobot_env_vars"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true

[dev-dependencies]
claims = "=0.7.1"
once_cell = "=1.19.0"
